bug: Trying new technique to fix the bug on mobile chrome bottom bar   hiding part of the footer.
  - Added useEffect to App.jsx and created a new vh unit which is 1%
    of the actual viewport height.
  - We set this value on initial load and window resize.
  - We use the new vh unit to set the min-height on the appContainer
    and multiply by 100 to get the full height. Provide 1svh as a
    fallback.

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -91,7 +91,8 @@ button {
 .appContainer {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100svh;
+  /* This uses a custom property set by JS to correctly size the viewport on mobile. */
+  min-height: calc(var(--vh, 1svh) * 100);
 }
 
 @media (prefers-reduced-motion: reduce) {
